Elimino encabezados y sumarios de RAC

--- a/Playground/eliminar_encabezado_sumarios.ipynb
+++ b/Playground/eliminar_encabezado_sumarios.ipynb
@@ -719,7 +719,8 @@
    "metadata": {},
    "source": [
     "## JAMK\n",
-    "\n"
+    "\n",
+    "Los encabezados, sumarios, fechas e identificadores de boletin de JAMK cumplen con la siguiente regex: `[^\\.\\?:!]$`."
    ]
   },
   {
@@ -731,7 +732,9 @@
     "cursor = db.boletines.find(\n",
     "    {'candidato': 'JAMK'}, # Filtro\n",
     "    {'boletin':1} # Proyección\n",
-    ").sort('fecha')"
+    ").sort('fecha')\n",
+    "\n",
+    "patron = re.compile(r'[^\\.\\?:!]$')"
    ]
   },
   {
@@ -904,7 +907,6 @@
     }
    ],
    "source": [
-    "patron = re.compile(r'[^\\.\\?:!]$')\n",
     "updates = []\n",
     "for boletin in cursor:\n",
     "    contenido = boletin['boletin'].split('\\n')\n",
@@ -956,6 +958,231 @@
    "source": [
     "res = db.boletines.bulk_write(updates)\n",
     "pprint(res.bulk_api_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RAC\n",
+    "\n",
+    "Los encabezados, fechas e identificadores de boletin de RAC cumplen con la siguiente regex: `[^\\.\\?:!]$`.\n",
+    "\n",
+    "Los sumarios con la regex: `^[(* )(\\u2022 )]`, donde \\u2022 es el caracter •"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = db.boletines.find(\n",
+    "    {'candidato': 'RAC'}, # Filtro\n",
+    "    {'boletin':1} # Proyección\n",
+    ").sort('fecha')\n",
+    "\n",
+    "patron = re.compile(r'([^\\.\\?:!]$)|(^[(* )(\\u2022 )])')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 3\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 3\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 3\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 3\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 3\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 3\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 4\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 5\n",
+      "Líneas eliminadas: 6\n",
+      "Líneas eliminadas: 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.cursor.Cursor at 0x2837ca11b48>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "updates = []\n",
+    "for boletin in cursor:\n",
+    "    contenido = boletin['boletin'].split('\\n')\n",
+    "    n_matched = 0\n",
+    "    for i, sent in enumerate(contenido):\n",
+    "        if i>=8:\n",
+    "            break\n",
+    "        match = patron.search(sent.strip())\n",
+    "        if match:\n",
+    "            n_matched += 1\n",
+    "        else:\n",
+    "            break # En cuanto no encuentre coincidencia, sale del bucle\n",
+    "    if n_matched >0:\n",
+    "#         print('\\n'.join(contenido[n_matched:n_matched+2]))\n",
+    "#         print('\\n'.join(contenido[:n_matched]))\n",
+    "        updates.append(UpdateOne(\n",
+    "            {'_id': boletin['_id']},\n",
+    "            {'$set': {\n",
+    "                'boletin':'\\n'.join(contenido[n_matched:])\n",
+    "            }}\n",
+    "        ))\n",
+    "    print(f'Líneas eliminadas: {n_matched}')\n",
+    "cursor.rewind()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nInserted': 0,\n",
+      " 'nMatched': 116,\n",
+      " 'nModified': 116,\n",
+      " 'nRemoved': 0,\n",
+      " 'nUpserted': 0,\n",
+      " 'upserted': [],\n",
+      " 'writeConcernErrors': [],\n",
+      " 'writeErrors': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = db.boletines.bulk_write(updates)\n",
+    "pprint(res.bulk_api_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
    ]
   },
   {
