Estandarización automática de uso de comillas dobles

--- a/Preprocesamiento/2_preprocesar_boletines.ipynb
+++ b/Preprocesamiento/2_preprocesar_boletines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,6 +153,12 @@
     "        (r'^\\+.*\\+\\n', ''),\n",
     "        # Elimino nuevas lineas y espacios al inicio y fin de archivo\n",
     "        (r'(^([ \\n]+))|(([ \\n]+)$)', ''),\n",
+    "        # Estandarizo el uso de comillas dobles a “Cita chidorina”\n",
+    "        # Caracteres \\u201c “  \\u201d ”\n",
+    "        (r'(^|[ \\n])\\u201d([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])', r'\\1“\\2'),\n",
+    "        (r'(^|[ \\n])\"([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])', r'\\1“\\2'),\n",
+    "        (r'([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])\\u201c($|[ ,\\.\\n])', r'\\1”\\2'),\n",
+    "        (r'([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])\"($|[ ,\\.\\n])', r'\\1”\\2'),\n",
     "    ]\n",
     "    remplazos = [(re.compile(patron), remplazo) for patron, remplazo in remplazos]\n",
     "    for fname in tqdm(archivos):\n",
@@ -169,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 85/85 [00:05<00:00, 14.75it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 116/116 [00:00<00:00, 317.70it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 145/145 [00:00<00:00, 239.06it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 85/85 [00:05<00:00, 15.36it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 116/116 [00:00<00:00, 656.62it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 145/145 [00:00<00:00, 624.81it/s]\n"
      ]
     }
    ],
