Preprocesamiento de guiones

--- a/Preprocesamiento/2_preprocesar_boletines.ipynb
+++ b/Preprocesamiento/2_preprocesar_boletines.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +159,11 @@
     "        (r'(^|[ \\n])\"([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])', r'\\1“\\2'),\n",
     "        (r'([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])\\u201c($|[ ,\\.\\n])', r'\\1”\\2'),\n",
     "        (r'([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])\"($|[ ,\\.\\n])', r'\\1”\\2'),\n",
+    "        # Cambio dos guiones por guión por simple\n",
+    "        (r'--+', r'—'),\n",
+    "        # Cambio estructuras -hola mundo- por —Hola mundo— (caracter \\u2014)\n",
+    "        (r'(^|[ \\n])-([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])', r'\\1—\\2'),\n",
+    "        (r'([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])-($|[ ,\\.\\n])', r'\\1—\\2'),\n",
     "    ]\n",
     "    remplazos = [(re.compile(patron), remplazo) for patron, remplazo in remplazos]\n",
     "    for fname in tqdm(archivos):\n",
@@ -175,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 85/85 [00:05<00:00, 15.96it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 116/116 [00:00<00:00, 626.53it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 145/145 [00:00<00:00, 620.81it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 85/85 [00:05<00:00, 15.72it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 116/116 [00:00<00:00, 572.53it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 145/145 [00:00<00:00, 528.25it/s]\n"
      ]
     }
    ],
