--- a/Preprocesamiento/2_preprocesar_boletines.ipynb
+++ b/Preprocesamiento/2_preprocesar_boletines.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
     "        # Elimino tablas al inicio\n",
     "        (r'^\\+.*\\+\\n', ''),\n",
     "        # Elimino nuevas lineas y espacios al inicio y fin de archivo\n",
-    "        (r'(^([ \\n]+))|(([ \\n]+)$)', ''),\n",
+    "        (r'(^[ \\n]+)|([ \\n]+$)', ''),\n",
     "        # Estandarizo el uso de comillas dobles a “Cita chidorina”\n",
     "        # Caracteres \\u201c “  \\u201d ”\n",
     "        (r'(^|[ \\n])\\u201d([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])', r'\\1“\\2'),\n",
@@ -164,6 +164,10 @@
     "        # Cambio estructuras -hola mundo- por —Hola mundo— (caracter \\u2014)\n",
     "        (r'(^|[ \\n])-([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])', r'\\1—\\2'),\n",
     "        (r'([0-9\\wáéíóúÁÉÍÓÚüÜÑñ])-($|[ ,\\.\\n])', r'\\1—\\2'),\n",
+    "        # Elimino caracter de acento agudo\n",
+    "        (r'\\u00B4', ''),\n",
+    "        # Cambio comillas simples \\u2018 y \\u2019 por '\n",
+    "        (r'[\\u2018\\u2019]', r\"'\"),\n",
     "    ]\n",
     "    remplazos = [(re.compile(patron), remplazo) for patron, remplazo in remplazos]\n",
     "    for fname in tqdm(archivos):\n",
@@ -180,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 85/85 [00:05<00:00, 15.72it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 116/116 [00:00<00:00, 572.53it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 145/145 [00:00<00:00, 528.25it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 85/85 [00:05<00:00, 15.78it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 116/116 [00:00<00:00, 590.54it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████| 145/145 [00:00<00:00, 560.89it/s]\n"
      ]
     }
    ],
