Nuevos resultados de emparejamiento

--- a/Preprocesamiento/3_emparejar_contenido_boletines.ipynb
+++ b/Preprocesamiento/3_emparejar_contenido_boletines.ipynb
@@ -9,14 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo import MongoClient, UpdateOne\n",
-    "import os\n",
     "import dateutil.parser as parser\n",
-    "import re\n",
+    "import os, re, csv, errno\n",
     "from datetime import timedelta, datetime\n",
     "from bson.objectid import ObjectId\n",
     "from pprint import pprint\n",
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +102,7 @@
        " datetime.datetime(2018, 4, 5, 12, 0, tzinfo=tzoffset(None, -21600))]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +138,7 @@
        " datetime.datetime(2018, 6, 1, 12, 0, tzinfo=tzoffset(None, -21600))]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +174,7 @@
        " datetime.datetime(2018, 4, 1, 12, 0, tzinfo=tzoffset(None, -21600))]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -207,18 +206,11 @@
      "output_type": "stream",
      "text": [
       "{'_id': ObjectId('5ec3089dd380e649eb619ce9'),\n",
-      " 'boletin': 'Juntos haremos historia\\n'\n",
-      "            'BOLETÍN CAMPAÑA-009\\n'\n",
-      "            'PIDE LÓPEZ OBRADOR A TRUMP QUE NO MALTRATE A LOS MEXICANOS, '\n",
-      "            '“QUEREMOS RESPETO MUTUO”\\n'\n",
-      "            '- NI LAS AMENAZAS, NI LOS MILITARES A LA FRONTERA EVITARAN QUE '\n",
-      "            'MÉXICO QUIERA TENER UNA RELACIÓN DE AMISTAD CON EU: AMLO\\n'\n",
-      "            'MATAMOROS, TAMAULIPAS, 06 DE ABRIL DE 2018.- Andrés Manuel López '\n",
-      "            'Obrador manifestó que México y Estados Unidos “somos pueblos que '\n",
-      "            'estamos hermanados, los gobiernos no tienen por qué separar a los '\n",
-      "            'pueblos, nosotros le pedimos al presidente Donald Trump con todo '\n",
-      "            'respeto que no maltrate a los mexicanos, no queremos racismo y '\n",
-      "            'discriminación, queremos respeto mutuo”.\\n'\n",
+      " 'boletin': 'Andrés Manuel López Obrador manifestó que México y Estados Unidos '\n",
+      "            '“somos pueblos que estamos hermanados, los gobiernos no tienen '\n",
+      "            'por qué separar a los pueblos, nosotros le pedimos al presidente '\n",
+      "            'Donald Trump con todo respeto que no maltrate a los mexicanos, no '\n",
+      "            'queremos racismo y discriminación, queremos respeto mutuo”.\\n'\n",
       "            'Recalcó que nunca se le faltará el respeto al pueblo '\n",
       "            'estadounidense, pero México y su pueblo no será piñata de ningún '\n",
       "            'pueblo extranjero. Y por eso, recordó, ayer que por primera vez '\n",
@@ -347,6 +339,7 @@
       "               '“queremos respeto mutuo”',\n",
       " 'estado': 'Tamaulipas',\n",
       " 'fecha': datetime.datetime(2018, 4, 6, 18, 0),\n",
+      " 'file_name': 'Boletín-campaña-009-1_060418.txt',\n",
       " 'id': 7,\n",
       " 'id_interno': 'BOLETÍN CAMPAÑA-009',\n",
       " 'localidad': 'Matamoros',\n",
@@ -378,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,51 +430,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "85it [00:07, 11.62it/s]\n",
-      "1it [00:00,  7.99it/s]"
+      "85it [00:08, 10.19it/s]\n",
+      "2it [00:00, 12.19it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 85, 'nModified': 85, 'nRemoved': 0, 'upserted': []}\n"
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 85, 'nModified': 2, 'nRemoved': 0, 'upserted': []}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "147it [00:12, 11.52it/s]\n",
-      "2it [00:00, 12.08it/s]"
+      "147it [00:12, 11.55it/s]\n",
+      "2it [00:00, 11.74it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 147, 'nModified': 147, 'nRemoved': 0, 'upserted': []}\n"
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 147, 'nModified': 0, 'nRemoved': 0, 'upserted': []}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "116it [00:10, 11.32it/s]\n"
+      "116it [00:09, 11.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 116, 'nModified': 116, 'nRemoved': 0, 'upserted': []}\n"
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 116, 'nModified': 1, 'nRemoved': 0, 'upserted': []}\n"
      ]
     }
    ],
@@ -494,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -527,19 +520,26 @@
     }
    ],
    "source": [
-    "for candidato in CANDIDATOS[:]:\n",
+    "for candidato in CANDIDATOS:\n",
     "    pprint(coincidencias[candidato][:5])\n",
     "    print()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultados\n",
+    "\n",
+    "Guardo tuplas de resultados en archivos csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "import errno\n",
     "for candidato in CANDIDATOS:\n",
     "    ruta_rel_match = os.path.join('..', 'Boletines', candidato, 'metadata')\n",
     "    ruta_abs_match = os.path.abspath(ruta_rel_match)\n",
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
