--- a/Playground/Freeling/freeling_corpus_unam.ipynb
+++ b/Playground/Freeling/freeling_corpus_unam.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Freeling\n",
+    "\n",
+    "Uso el servicio que ofrece corpus unam para hacer uso de freeling. Este servicio se encuentra en la página: http://www.corpus.unam.mx/servicio-freeling/ .\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -13,6 +22,15 @@
     "import re\n",
     "import json\n",
     "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conexión a DB\n",
+    "\n",
+    "Se necesita tener un archivo llamado mongo_uri.txt en la carpeta raíz del proyecto con la uri de conexión al replica set de MongoDB."
    ]
   },
   {
@@ -37,6 +55,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtengo los campos boletin, encabezado y sumarios de la base de datos de boletines.\n",
+    "\n",
+    "También, agrego un partón para sustituir los finales de línea (\\n) por punto final. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -50,6 +77,17 @@
     "# Agrego punto final a oraciones que no tienen\n",
     "patron = re.compile(r'([^\\.])(\\n|$)')\n",
     "remplazo = r'\\1.\\n'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Petición al servicio Freeling\n",
+    "\n",
+    "Construyo la función para conexión a http://www.corpus.unam.mx/servicio-freeling/analyze.php .\n",
+    "\n",
+    "Esta función regresa un diccionario con las oraciones etiquetadas, lematizadas y tokenizadas."
    ]
   },
   {
@@ -587,7 +625,7 @@
     "    sentences_enc = peticion_freeling(archivo)\n",
     "    update['$set']['encabezado'] = sentences_enc\n",
     "    # Duermo para no darle demasiadas requests por segundo al server\n",
-    "    sleep(1)\n",
+    "    sleep(0.4)\n",
     "    \n",
     "    # Sumarios\n",
     "    try:\n",
@@ -596,7 +634,7 @@
     "        ) \n",
     "        sentences_sum = peticion_freeling(archivo)\n",
     "        update['$set']['sumarios'] = sentences_sum\n",
-    "        sleep(1)\n",
+    "        sleep(0.7)\n",
     "    except KeyError:\n",
     "        sentences_sum = []\n",
     "    \n",
@@ -999,26 +1037,6 @@
    "outputs": [],
    "source": [
     "client.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test = \"En un pronunciamiento especial, el candidato de la coalición Todos por México condenó enérgicamente los abusos —suscitados a consecuencia de la llamada política de “Tolerancia Cero”—, que incluyen la separación de niños y padres, así como el confinamiento de menores en jaulas. Meade llamó a la Organización de las Naciones Unidas y a Unicef a intervenir para detener los atropellos.\"\n",
-    "# files = {'file': io.StringIO(test)}\n",
-    "# #Parámetros\n",
-    "# params = {'outf': 'tagged', 'format': 'json'}\n",
-    "# #Enviar petición\n",
-    "# url = \"http://www.corpus.unam.mx/servicio-freeling/analyze.php\"\n",
-    "# r = requests.post(url, files=files, params=params)\n",
-    "# #Convertir de formato json\n",
-    "# obj = r.json()\n",
-    "    \n",
-    "# with open('./out.json', 'w', encoding='utf-8') as wf:\n",
-    "#     json.dump(obj, wf)"
    ]
   },
   {
