Actualizo rutas, de Boletines a Corpus

--- a/ProyectoFinal/LimpiezaDeDatos/3_emparejar_contenido_boletines.ipynb
+++ b/ProyectoFinal/LimpiezaDeDatos/3_emparejar_contenido_boletines.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from datetime import timedelta, datetime\n",
     "from bson.objectid import ObjectId\n",
     "from pprint import pprint\n",
-    "from tqdm import tqdm"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -31,14 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "UNA_HORA = timedelta(hours=1)\n",
     "CANDIDATOS = ['AMLO', 'JAMK', 'RAC']\n",
     "metadatos = { \n",
-    "    candidato : {'ruta_abs' : '','fnames' : [],'fechas_iso': [] }\n",
+    "    candidato : {\n",
+    "        'ruta_abs' : '',\n",
+    "        'fnames' : [],\n",
+    "        'fechas_iso': [] \n",
+    "    }\n",
     "    for candidato in CANDIDATOS\n",
     "}"
    ]
@@ -52,17 +56,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Usuario.000\\Documents\\Facultad\\Git\\2020-2\\APIT-2020-2\\Boletines\\AMLO\\txt\\preprocesados\n",
       "['Boletín-campaña-002-1_020418.txt',\n",
       " 'Boletín-campaña-004_040418.txt',\n",
       " 'Boletín-campaña-005_040418.txt']\n",
       "\n",
-      "C:\\Users\\Usuario.000\\Documents\\Facultad\\Git\\2020-2\\APIT-2020-2\\Boletines\\JAMK\\txt\\preprocesados\n",
       "['010418 JAMK miles siguen inicio campaña.txt',\n",
       " '010418 JAMK Yuc candidato cerca jóvenes.txt',\n",
       " '010418 JAMK Yuc presenta 7 compr Mex.txt']\n",
       "\n",
-      "C:\\Users\\Usuario.000\\Documents\\Facultad\\Git\\2020-2\\APIT-2020-2\\Boletines\\RAC\\txt\\preprocesados\n",
       "['COMUNICADO_01-RAC-30-03-2018.txt',\n",
       " 'COMUNICADO_02-RAC-31-03-2018.txt',\n",
       " 'COMUNICADO_03-RAC-31-03-2018.txt']\n",
@@ -72,10 +73,10 @@
    ],
    "source": [
     "for candidato in CANDIDATOS:\n",
-    "    ruta_rel = os.path.join('..', 'Boletines', candidato, 'txt', 'preprocesados')\n",
+    "    ruta_rel = os.path.join('..', 'Corpus', candidato, 'txt', 'preprocesados')\n",
     "    metadatos[candidato]['ruta_abs'] = os.path.abspath(ruta_rel)\n",
     "    metadatos[candidato]['fnames'] = os.listdir(metadatos[candidato]['ruta_abs'])\n",
-    "    print(metadatos[candidato]['ruta_abs'])\n",
+    "#     print(metadatos[candidato]['ruta_abs'])\n",
     "    pprint(metadatos[candidato]['fnames'][:3])\n",
     "    print()"
    ]
@@ -541,7 +542,7 @@
    "outputs": [],
    "source": [
     "for candidato in CANDIDATOS:\n",
-    "    ruta_rel_match = os.path.join('..', 'Boletines', candidato, 'metadata')\n",
+    "    ruta_rel_match = os.path.join('..', 'Corpus', candidato, 'metadata')\n",
     "    ruta_abs_match = os.path.abspath(ruta_rel_match)\n",
     "    try:\n",
     "        os.makedirs(ruta_abs_match) # cre\n",
